- Atualizações nos BO's - Atualizações nos DAO's - Implementações de métodos nos controllers - Atualizações na DDL SQL - Cadastro de Cliente: OK - Termo de Responsabilidade ao Perder Ticket